--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~18.1.0",
+    "@angular/cdk": "^18.1.1",
     "@angular/common": "~18.1.0",
     "@angular/compiler": "~18.1.0",
     "@angular/core": "~18.1.0",
     "@angular/forms": "~18.1.0",
+    "@angular/material": "^18.1.1",
     "@angular/platform-browser": "~18.1.0",
     "@angular/platform-browser-dynamic": "~18.1.0",
     "@angular/router": "~18.1.0",
@@ -56,8 +58,11 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-preset-angular": "~14.1.0",
+    "jsonc-eslint-parser": "^2.1.0",
+    "ng-packagr": "~18.1.0",
     "nx": "19.5.2",
     "postcss": "^8.4.5",
+    "postcss-url": "~10.1.3",
     "prettier": "^2.6.2",
     "tailwindcss": "^3.0.2",
     "ts-jest": "^29.1.0",
