--- a/nx.json
+++ b/nx.json
@@ -80,6 +80,9 @@
       "linter": "eslint",
       "unitTestRunner": "jest",
       "strict": false
+    },
+    "@nx/angular:component": {
+      "style": "scss"
     }
   },
   "defaultProject": "kreservations",
