[ADD] redirect to home and first structure

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,7 +19,10 @@
         "libs/dashboard/landing-pages/src/index.ts"
       ],
       "@kreservations/layout": ["libs/core/layout/src/index.ts"],
-      "@kreservations/stylesheets": ["libs/core/stylesheets/src/index.ts"]
+      "@kreservations/stylesheets": ["libs/core/stylesheets/src/index.ts"],
+      "@kreservations/view-reservations": [
+        "libs/reservations/view-reservations/src/index.ts"
+      ]
     }
   },
   "exclude": ["node_modules", "tmp"]
