--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,12 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@kreservations/data-access": [
+        "libs/reservations/data-access/src/index.ts"
+      ],
+      "@kreservations/feature-stepper": [
+        "libs/shared/feature-stepper/src/index.ts"
+      ],
       "@kreservations/landing-pages": [
         "libs/dashboard/landing-pages/src/index.ts"
       ],
