--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
     "@angular/platform-browser": "~18.1.0",
     "@angular/platform-browser-dynamic": "~18.1.0",
     "@angular/router": "~18.1.0",
+    "@ngrx/component": "^18.0.1",
+    "@ngrx/component-store": "^18.0.1",
+    "@ngrx/effects": "^18.0.1",
+    "@ngrx/router-store": "^18.0.1",
+    "@ngrx/store": "^18.0.1",
+    "@ngrx/store-devtools": "^18.0.1",
     "@nx/angular": "19.5.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
