--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -25,6 +25,7 @@
         "libs/dashboard/landing-pages/src/index.ts"
       ],
       "@kreservations/layout": ["libs/core/layout/src/index.ts"],
+      "@kreservations/models": ["libs/shared/models/src/index.ts"],
       "@kreservations/stylesheets": ["libs/core/stylesheets/src/index.ts"],
       "@kreservations/view-reservations": [
         "libs/reservations/view-reservations/src/index.ts"
