--- a/project.json
+++ b/project.json
@@ -15,11 +15,15 @@
         "main": "./src/main.ts",
         "polyfills": ["zone.js"],
         "tsConfig": "tsconfig.app.json",
+        "allowedCommonJsDependencies": [
+          "lodash"
+        ],
         "inlineStyleLanguage": "scss",
         "assets": [
           {
             "glob": "**/*",
-            "input": "public"
+            "input": "libs/core/assets/src/lib",
+            "output": "assets"
           }
         ],
        "styles": [
@@ -57,6 +61,9 @@
     },
     "serve": {
       "executor": "@angular-devkit/build-angular:dev-server",
+      "options": {
+        "port": 4201
+      },
       "configurations": {
         "production": {
           "buildTarget": "kreservations:build:production"
