--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~18.1.0",
     "@angular/platform-browser-dynamic": "~18.1.0",
     "@angular/router": "~18.1.0",
+    "@ng-matero/extensions": "^18.1.1",
     "@ngrx/component": "^18.0.1",
     "@ngrx/component-store": "^18.0.1",
     "@ngrx/effects": "^18.0.1",
