--- a/apps/kreservations/tsconfig.json
+++ b/apps/kreservations/tsconfig.json
@@ -25,5 +25,5 @@
     "strictInputAccessModifiers": false,
     "strictTemplates": false
   },
-  "extends": "./tsconfig.base.json"
+  "extends": "../../tsconfig.base.json"
 }
