--- a/apps/kreservations/tsconfig.app.json
+++ b/apps/kreservations/tsconfig.app.json
@@ -1,10 +1,8 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "./dist/out-tsc",
-    "types": [
-      "node"
-    ]
+    "outDir": "../../dist/out-tsc",
+    "types": ["node"]
   },
   "files": ["src/main.ts"],
   "include": ["src/**/*.d.ts"],
