--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@angular/platform-browser": "~18.1.0",
     "@angular/platform-browser-dynamic": "~18.1.0",
     "@angular/router": "~18.1.0",
+    "@nestjs/common": "^10.0.2",
+    "@nestjs/core": "^10.0.2",
+    "@nestjs/platform-express": "^10.0.2",
     "@ng-matero/extensions": "^18.1.1",
     "@ngrx/component": "^18.0.1",
     "@ngrx/component-store": "^18.0.1",
@@ -28,6 +31,8 @@
     "@ngrx/store": "^18.0.1",
     "@ngrx/store-devtools": "^18.0.1",
     "@nx/angular": "19.5.2",
+    "axios": "^1.6.0",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -42,12 +47,17 @@
     "@angular/cli": "~18.1.0",
     "@angular/compiler-cli": "~18.1.0",
     "@angular/language-service": "~18.1.0",
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.0.2",
     "@nx/cypress": "19.5.2",
     "@nx/eslint": "19.5.2",
     "@nx/eslint-plugin": "19.5.2",
     "@nx/jest": "19.5.2",
     "@nx/js": "19.5.2",
+    "@nx/nest": "19.5.2",
+    "@nx/node": "19.5.2",
     "@nx/web": "19.5.2",
+    "@nx/webpack": "19.5.2",
     "@nx/workspace": "19.5.2",
     "@schematics/angular": "~18.1.0",
     "@swc-node/register": "~1.9.1",
@@ -65,6 +75,7 @@
     "eslint-plugin-cypress": "^2.13.4",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "~14.1.0",
     "jsonc-eslint-parser": "^2.1.0",
     "ng-packagr": "~18.1.0",
@@ -75,7 +86,8 @@
     "tailwindcss": "^3.0.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.5.2"
+    "typescript": "~5.5.2",
+    "webpack-cli": "^5.1.4"
   },
   "nx": {
     "includedScripts": []
