[ADD] Docker compose

--- a/apps/kreservations-back/project.json
+++ b/apps/kreservations-back/project.json
@@ -5,6 +5,13 @@
   "projectType": "application",
   "tags": [],
   "targets": {
+    "build": {
+      "executor": "@nx/webpack:webpack",
+      "options": {
+        "webpackConfig": "apps/kreservations-back/webpack.config.js",
+        "outputPath": "dist/kreservations-back"
+      }
+    },
     "serve": {
       "executor": "@nx/js:node",
       "defaultConfiguration": "development",
